tests/resource/valid/class/multiple_parent.mamba
class MyType(a: String)
class MyType2(b: String)

class MyClass1: MyType("asdf"), MyType2("qwerty")
    def other: Int
