tests/resource/invalid/type/class/same_parent_twice.mamba
class MyType(a: String)

class MyClass1: MyType("asdf"), MyType("qwerty")
    def other: Int
